# OBCX

./: .clang-tidy  .envrc  .gitignore  CHANGELOG.md  CHAT_LLM.md  CLAUDE.md  CMakeLists.txt  README.md  SOLVING.md  TODO.md  flake.nix  plugins-example.toml  plugins.toml  prompt.txt  request.md  shell.nix  vcpkg-base.json  vcpkg-configuration.json  vcpkg.json
examples/plugins/: CMakeLists.txt  example_plug_config.toml
examples/plugins/bridge_bot/: CMakeLists.txt
examples/plugins/bridge_bot/dependency/: CMakeLists.txt  config.cpp  database_manager.cpp  database_manager.hpp  media_processor.cpp  media_processor.hpp  path_manager.cpp  qq_handler.cpp  qq_handler.hpp  retry_queue_manager.cpp  retry_queue_manager.hpp  telegram_handler.cpp  telegram_handler.hpp
examples/plugins/bridge_bot/dependency/database/: database_manager.cpp  database_manager_create.cpp  database_manager_delete.cpp  database_manager_insert.cpp  database_manager_query.cpp  database_manager_update.cpp  database_manager_utils.cpp  manager_insert.cpp  manager_query.cpp  query.cpp
examples/plugins/bridge_bot/dependency/qq/: event_handler.cpp  media_processor.cpp  message_formatter.cpp  qq_command_handler.cpp  qq_command_handler.hpp  qq_event_handler.cpp  qq_event_handler.hpp  qq_handler.cpp  qq_media_processor.cpp  qq_media_processor.hpp  qq_message_formatter.cpp  qq_message_formatter.hpp
examples/plugins/bridge_bot/dependency/telegram/: command_handler.cpp  media_processor.cpp  telegram_command_handler.cpp  telegram_command_handler.hpp  telegram_event_handler.cpp  telegram_event_handler.hpp  telegram_handler.cpp  telegram_media_processor.cpp  telegram_media_processor.hpp  telegram_message_formatter.cpp  telegram_message_formatter.hpp
examples/plugins/bridge_bot/include/: config.hpp  retry_queue_manager.hpp
examples/plugins/bridge_bot/include/database/: database_manager.hpp  manager.hpp
examples/plugins/bridge_bot/include/qq/: media_processor.hpp  message_formatter.hpp  qq_command_handler.hpp  qq_event_handler.hpp  qq_handler.hpp  qq_media_processor.hpp  qq_message_formatter.hpp
examples/plugins/bridge_bot/include/telegram/: telegram_command_handler.hpp  telegram_handler.hpp  (+2 more)
examples/plugins/bridge_bot/qq_to_tg/: CMakeLists.txt  qq_to_tg_plugin.cpp  qq_to_tg_plugin.hpp
examples/plugins/bridge_bot/tg_to_qq/: CMakeLists.txt  tg_to_qq_plugin.cpp  tg_to_qq_plugin.hpp
examples/plugins/chat_llm/: CMakeLists.txt  chat_llm_plugin.cpp  chat_llm_plugin.hpp  plugin.toml
examples/plugins/chat_llm/src/: command_parser.cpp  llm_client.cpp  message_repository.cpp  prompt_builder.cpp  runtime.cpp
examples/plugins/dependency/bridge_bot/: config.cpp  database_manager.cpp  database_manager.hpp  media_processor.cpp  path_manager.cpp  qq_handler.cpp  qq_handler.hpp  retry_queue_manager.cpp  telegram_handler.cpp
examples/plugins/exhentai_fetcher/: CMakeLists.txt  exhentai_fetcher_config.example.toml  exhentai_fetcher_plugin.cpp  exhentai_fetcher_plugin.hpp  exhentai_parser.cpp  exhentai_parser.hpp  plugin.toml
examples/plugins/group_member_backup/: CMakeLists.txt  README.md  group_member_backup_config.example.toml  group_member_backup_plugin.cpp  group_member_backup_plugin.hpp  plugin.toml
examples/plugins/image_extract/: CMakeLists.txt  image_extract_plugin.cpp  image_extract_plugin.hpp  plugin.toml
examples/plugins/image_search/: CMakeLists.txt  plugin.toml
examples/plugins/mc_rcon/: CMakeLists.txt  config.cpp  config.hpp  mc_rcon_config.example.toml  mc_rcon_plugin.cpp  mc_rcon_plugin.hpp  mcrcon.c  mcrcon.h  plugin.toml  rcon_client.cpp  rcon_client.hpp
examples/plugins/qq_to_tg/: CMakeLists.txt  qq_to_tg_plugin.cpp  qq_to_tg_plugin.hpp
examples/plugins/sticker_export/: CMakeLists.txt  plugin.toml  sticker_export_plugin.cpp  sticker_export_plugin.hpp
examples/plugins/tg_to_qq/: CMakeLists.txt  tg_to_qq_plugin.cpp  tg_to_qq_plugin.hpp
examples/plugins/torrent_downloader/: CMakeLists.txt  plugin.toml  qbittorrent_client.cpp  qbittorrent_client.hpp  rclone_client.cpp  torrent_downloader_plugin.cpp
src/: CMakeLists.txt
src/common/: cli_handler.cpp  component_manager.cpp  config_loader.cpp  embedded_locales.cpp  i18n_log_messages.cpp  json_utils.cpp  logger.cpp  media_converter.cpp  message_type.cpp  plugin_manager.cpp
src/core/: qq_bot.cpp  tg_bot.cpp
src/interfaces/: bot.cpp  connection_manager.cpp  plugin.cpp
src/module/: obcx.cppm
src/module/common/: cli_handler.cppm  common.cppm  component_manager.cppm  config_loader.cppm  embedded_locales.cppm  i18n_log_messages.cppm  json_utils.cppm  logger.cppm  media_converter.cppm  message_type.cppm  plugin_manager.cppm
src/module/core/: core.cppm  event_dispatcher.cppm  qq_bot.cppm  task_scheduler.cppm  tg_bot.cppm
src/module/interface/: bot.cppm  connection_manager.cppm  interface.cppm  plugin.cppm  protocol_adapter.cppm
src/module/network/: http_client.cppm  network.cppm  proxy_http_client.cppm  websocket_client.cppm
src/module/onebot11/: onebot11.cppm
src/module/onebot11/adapter/: event_converter.cppm  message_converter.cppm  protocol_adapter.cppm
src/module/telegram/: telegram.cppm
src/module/telegram/adapter/: protocol_adapter.cppm
src/module/tui/: app.cppm  sink.cppm  tui.cppm
src/network/: compression.cpp  http_client.cpp  http_client_impl.hpp  http_client_sync.cpp  proxy_http_client.cpp  proxy_tunnel.cpp  websocket_client.cpp
src/onebot11/adapter/: event_converter.cpp  message_converter.cpp  protocol_adapter.cpp
src/onebot11/network/http/: connection_manager.cpp
src/onebot11/network/websocket/: connection_manager.cpp
src/plugin/: CMakeLists.txt  main.cpp  plugin_cli.cpp  plugin_cli.hpp  plugin_installer.cpp  plugin_installer.hpp  plugin_registry.cpp  plugin_registry.hpp  plugin_resolver.cpp  plugin_resolver.hpp
src/telegram/adapter/: protocol_adapter.cpp
src/telegram/network/http/: connection_manager.cpp
src/tui/: tui_app.cpp
tests/: CMakeLists.txt  docker-compose.yml  http_client_timeout_test.cpp  plugin_topology_test.cpp  timeout_mechanism_test.cpp  websocket_queue_test.cpp  websocket_timeout_test.cpp
(+50 files in other folders)
