# Examples Plugins CMakeLists.txt Simple plugin implementations

# Set minimum required version
cmake_minimum_required(VERSION 3.15)

# Add plugin subdirectories
add_subdirectory(bridge_bot)
add_subdirectory(torrent_downloader)
add_subdirectory(mc_rcon)
add_subdirectory(image_extract)
add_subdirectory(group_member_backup)
add_subdirectory(chat_llm)
#add_subdirectory(image_search)

